Shang New Live/src/objects/COA_Master_FY_Balance__c.object
<CustomObject>
    <description>This is a junction between COA Master and FY
This would have COA Balance as Child object
This is used to roll-up values from COA Balance</description>
    <fields>
        <fullName>COA_Master__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>COA Master</label>
        <referenceTo>COA_Master__c</referenceTo>
        <relationshipLabel>COA Master FY Balance</relationshipLabel>
        <relationshipName>COA_Master_FY_Balance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fiscal Year</label>
        <referenceTo>Fiscal_Year__c</referenceTo>
        <relationshipLabel>COA Master FY Balance</relationshipLabel>
        <relationshipName>COA_Master_FY_Balance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Posted_Dr_RollUp__c</fullName>
        <label>Posted Dr (RollUp)</label>
        <summarizedField>COA_Balance__c.Posted_Dr__c</summarizedField>
        <summaryForeignKey>COA_Balance__c.COA_Master_FY_Balance__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>COA Master FY Balance</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>COA Master FY Balance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>COA Master FY Balance</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>